Fix T78213: Windows 10 Build Errors: Extern_Manaflow error messages

Kudos to LazyDodo for figuring this out