extern/mantaflow/preprocessed/gitinfo.h
@@ -1,3 +1,3 @@
 
 
-#define MANTA_GIT_VERSION "commit 2c83bddc59cd5140e5dd91b172167a7cba9d4960"
+#define MANTA_GIT_VERSION "commit 6725e6840a906167cc63474a22fc822d9aebf3e7"
